Who we are - full adaptive.

--- a/src/pug/components/are/_work.pug
+++ b/src/pug/components/are/_work.pug
@@ -80,6 +80,8 @@ section#work.work
 
         .work__row-right
 
+          h2.work__title.work__title-1.c-title!= "WORK, ONLINE, <span class='c-title--color'>ANYTIME</span>"
+
           .work__img.work__img-0
 
     .work__wrapper.work__wrapper-2
