--- a/src/scss/_components/are/_expertise.scss
+++ b/src/scss/_components/are/_expertise.scss
@@ -4,6 +4,10 @@
   padding-top: 79px;
   padding-bottom: 64px;
   background-color: #f8f8f8;
+  @include adaptive(767) {
+    padding-top: 52px;
+    padding-bottom: 57px;
+  }
 
   &__title {
     padding-bottom: 46px;
@@ -22,11 +26,21 @@
       align-items: center;
       justify-content: space-between;
       padding-top: 29px;
+      @include adaptive(767) {
+        flex-wrap: wrap;
+      }
 
       .are__block {
         width: 100%;
         max-width: calc((100% - 20px) / 2);
         margin-bottom: 0;
+        @include adaptive(767) {
+          max-width: 100%;
+
+          &:nth-of-type(1) {
+            margin-bottom: 10px;
+          }
+        }
       }
     }
   }
