--- a/src/scss/_components/are/_main.scss
+++ b/src/scss/_components/are/_main.scss
@@ -12,6 +12,9 @@
     left: 0;
     width: 100%;
     height: 100%;
+    @include adaptive(767) {
+      opacity: 0;
+    }
 
     &-left,
     &-right {
@@ -52,10 +55,19 @@
     padding-top: 152px;
     padding-bottom: 182px;
     min-height: calc(100vh - 51px);
+    @include adaptive(767) {
+      flex-wrap: wrap;
+      min-height: 0;
+      padding-top: 70px;
+      padding-bottom: 80px;
+    }
 
     &-left,
     &-right {
       width: 50%;
+      @include adaptive(767) {
+        width: 100%;
+      }
     }
   }
 
@@ -66,10 +78,10 @@
   }
 
   &__desc {
-    font-size: 22px;
     font-weight: 300;
     line-height: 1.45;
     color: #4a4a4a;
+    @include fluid(font-size, 320px, 1440px, 16px, 22px);
 
     &--pb {
       padding-bottom: 35px;
