--- a/src/scss/_components/are/_mapping.scss
+++ b/src/scss/_components/are/_mapping.scss
@@ -4,6 +4,13 @@
   padding-bottom: 108px;
   background-color: #f2f2f2;
 
+  .c-grid {
+    @include adaptive(767) {
+      padding-left: 0;
+      padding-right: 0;
+    }
+  }
+
   &__wrapper {
     &-0 {
       display: flex;
@@ -17,6 +24,9 @@
     display: flex;
     align-items: center;
     background-color: #ffffff;
+    @include adaptive(767) {
+      width: 100%;
+    }
 
     &-btn {
       display: flex;
@@ -33,6 +43,13 @@
       color: #ffffff;
       text-transform: uppercase;
       @include transition(background-color);
+      @include adaptive(767) {
+        width: calc(100% / 3);
+        font-size: 14px;
+      }
+      @include adaptive(575) {
+        font-size: 12px;
+      }
 
       &:first-of-type {
         margin-left: 0;
@@ -51,15 +68,31 @@
 
     &.is-active {
       display: flex !important;
+      @include adaptive(767) {
+        flex-wrap: wrap;
+      }
     }
 
     &-left,
     &-right {
       width: 50%;
+      @include adaptive(767) {
+        width: 100%;
+      }
+    }
+
+    &-left {
+      @include adaptive(767) {
+        padding-bottom: 23px;
+      }
     }
 
     &-right {
       padding-left: 14px;
+      @include adaptive(767) {
+        padding-left: 15px;
+        padding-right: 15px;
+      }
     }
 
     &-img {
@@ -69,6 +102,20 @@
       height: 352px;
       border: solid 1px #979797;
       background-color: #979797;
+      @include adaptive(767) {
+        max-width: 100%;
+      }
+
+      &:after {
+        content: '';
+        opacity: 0.8;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: linear-gradient(to bottom, #00000000, #00000023 30%, #00000042 50%, #00000085 70%, #000000cc 90%, #000000e1 96%, #000000);
+      }
 
       img {
         position: absolute;
@@ -88,10 +135,10 @@
 
     &-text {
       padding-bottom: 59px;
-      font-size: 22px;
       font-weight: 300;
       line-height: 1.45;
       color: #4a4a4a;
+      @include fluid(font-size, 320px, 1440px, 16px, 22px);
 
       &--pb {
         padding-bottom: 36px;
@@ -104,6 +151,10 @@
       width: 100%;
       max-width: 544px;
       padding-bottom: 24px;
+      @include adaptive(767) {
+        padding-left: 15px;
+        padding-right: 15px;
+      }
 
       p {
         font-size: 30px;
