--- a/src/scss/_shared/_swiper.scss
+++ b/src/scss/_shared/_swiper.scss
@@ -7,6 +7,13 @@
     max-width: 100%;
     height: 460px;
     padding: 0 15px 15px;
+    @include adaptive(991) {
+      height: 920px;
+    }
+    @include adaptive(767) {
+      padding-left: 0;
+      padding-right: 0;
+    }
 
     .swiper {
       &-slide {
@@ -17,6 +24,12 @@
           margin-top: 25px;
           box-shadow: 0 11px 11px 0 #00000021;
           background-color: #ffffff;
+          @include adaptive(991) {
+            max-width: calc((100% - 30px) / 2);
+          }
+          @include adaptive(575) {
+            max-width: calc((100% - 15px) / 2);
+          }
 
           &-top {
             position: relative;
@@ -54,13 +67,16 @@
             text-align: center;
 
             span {
-              white-space: nowrap;
               font-size: 16px;
               font-weight: 500;
               line-height: 1.5;
               letter-spacing: -0.4px;
               text-align: center;
               color: #000;
+              @include adaptive(767) {
+                font-size: 14px;
+                text-align: left;
+              }
             }
           }
 
