What We Do - full adaptive.

--- a/src/pug/components/do/_main.pug
+++ b/src/pug/components/do/_main.pug
@@ -3,10 +3,14 @@
 section#d-main.d-main
   .d-main__bg
     .d-main__bg-left
-      img(src="./img/img-dMain-left.png" srcset="./img/img-dMain-left@2x.png 2x" alt="" title="")
+      img(src="./img/img-dMain-left.png"
+      srcset="./img/img-dMain-left@2x.png 2x, ./img/img-dMain-left@3x.png 3x"
+      alt="" title="")
 
     .d-main__bg-right
-      img(src="./img/img-dMain-right.png" srcset="./img/img-dMain-right@2x.png 2x" alt="" title="")
+      img(src="./img/img-dMain-right.png"
+      srcset="./img/img-dMain-right@2x.png 2x, ./img/img-dMain-right@3x.png 3x"
+      alt="" title="")
 
   .c-grid
     .d-main__wrapper
