--- a/src/pug/components/do/_touch.pug
+++ b/src/pug/components/do/_touch.pug
@@ -26,6 +26,7 @@ section#touch.touch
         .touch__block.touch__block-0
           .touch__block-left
             .touch__block-map
+              #mapOffice1
 
           .touch__block-right
             p!= "Outsmart Insight Ltd<br>First Floor<br>67-69 George Street<br>London W1U 8LT"
@@ -33,6 +34,7 @@ section#touch.touch
         .touch__block.touch__block-1
           .touch__block-left
             .touch__block-map
+              #mapOffice2
 
           .touch__block-right
             p!= "Outsmart Insight Ltd<br>LABS Atrium<br>Chalk Farm Rd<br>London, NW1 8AH"
