--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -11,6 +11,6 @@ block content
     include components/home/_main
     include components/home/_flexible
     include components/home/_info
-    include components/home/_advantages
+    //include components/home/_advantages
     include components/home/_pre
     include components/home/_think
