--- a/src/pug/components/do/_network.pug
+++ b/src/pug/components/do/_network.pug
@@ -16,22 +16,22 @@ section#network.network
         .network__block-wrapper
           .network__block.network__block-0
             p.network__block-count.viewport-hide-js
-              span(data-from="0" data-to="70" data-speed="1500" data-refresh-interval="50" network-num-js)!= "100"
+              span(network-num-js data-count='70')!= "70"
               != "%"
             p.network__block-desc!= "EUROPE"
           .network__block.network__block-1
             p.network__block-count.viewport-hide-js
-              span(data-from="0" data-to="20" data-speed="1500" data-refresh-interval="50" network-num-js)!= "100"
+              span(network-num-js data-count='20')!= "20"
               != "%"
             p.network__block-desc!= "ASIA"
           .network__block.network__block-2
             p.network__block-count.viewport-hide-js
-              span(data-from="0" data-to="10" data-speed="1500" data-refresh-interval="50" network-num-js)!= "100"
+              span(network-num-js data-count='10')!= "10"
               != "%"
             p.network__block-desc!= "OTHER"
           .network__block.network__block-3
             p.network__block-count.viewport-hide-js
-              span(data-from="0" data-to="60" data-speed="1500" data-refresh-interval="50" network-num-js)!= "100"
+              span(network-num-js data-count='60')!= "60"
             p.network__block-desc!= "COUNTRIES"
 
 // SECTION network :: END
