--- a/src/pug/shared/_head.pug
+++ b/src/pug/shared/_head.pug
@@ -28,6 +28,10 @@ meta(name="theme-color" content="#ffffff")
 
 include _style
 
+if(pageClassName === 'p-do')
+  link(href="https://api.mapbox.com/mapbox-gl-js/v0.44.2/mapbox-gl.css")
+  script(src="https://api.mapbox.com/mapbox-gl-js/v0.44.2/mapbox-gl.js")
+
 <!--[if lt IE 9]>
 script(src='https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js')
 script(src='https://oss.maxcdn.com/respond/1.4.2/respond.min.js')
