--- a/src/scss/_components/do/_stand.scss
+++ b/src/scss/_components/do/_stand.scss
@@ -31,10 +31,21 @@
   &__block {
     width: 100%;
     max-width: calc((100% - (44px * 2)) / 3);
+    @include adaptive(767) {
+      max-width: 100%;
+      margin-bottom: 33px;
+
+      &:last-of-type {
+        margin-bottom: 0;
+      }
+    }
 
     &-wrapper {
       display: flex;
       justify-content: space-between;
+      @include adaptive(767) {
+        flex-wrap: wrap;
+      }
     }
 
     &-title {
@@ -54,6 +65,9 @@
       line-height: 1.37;
       letter-spacing: normal;
       color: #4a4a4a;
+      @include adaptive(767) {
+        font-size: 16px;
+      }
     }
   }
 }
