--- a/src/scss/_components/do/_touch.scss
+++ b/src/scss/_components/do/_touch.scss
@@ -8,15 +8,30 @@
     padding-top: 65px;
     padding-bottom: 80px;
     min-height: 727px;
+    @include adaptive(767) {
+      flex-wrap: wrap;
+      min-height: 0;
+    }
 
     &-left {
       width: 369px;
+      @include adaptive(767) {
+        width: 100%;
+        padding-bottom: 30px;
+      }
     }
 
     &-right {
       width: 100%;
       max-width: calc(100% - 369px);
       padding-left: 192px;
+      @include adaptive(991) {
+        padding-left: 15px;
+      }
+      @include adaptive(767) {
+        max-width: 100%;
+        padding-left: 0;
+      }
     }
   }
   
@@ -102,6 +117,9 @@
   &__block {
     display: flex;
     align-items: flex-start;
+    @include adaptive(1199) {
+      flex-wrap: wrap;
+    }
 
     &-0 {
       padding-bottom: 34px;
@@ -109,12 +127,20 @@
 
     &-left {
       width: 456px;
+      @include adaptive(1199) {
+        width: 100%;
+        padding-bottom: 15px;
+      }
     }
 
     &-right {
       width: 100%;
       max-width: calc(100% - 456px);
       padding-left: 15px;
+      @include adaptive(1199) {
+        max-width: 100%;
+        padding-left: 0;
+      }
 
       p {
         font-size: 16px;
@@ -125,9 +151,24 @@
     }
 
     &-map {
+      overflow: hidden;
+      position: relative;
       height: 265px;
       border: solid 1px #979797;
       background-color: #d8d8d8;
+      @include adaptive(1199) {
+        //height: auto;
+      }
+
+      > * {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        //width: 100%;
+        //height: 100%;
+      }
     }
   }
 }
