--- a/src/scss/_shared/_swiper.scss
+++ b/src/scss/_shared/_swiper.scss
@@ -324,6 +324,10 @@
         height: 238px;
         border: solid 1px #979797;
         background-color: #d8d8d8;
+        @include adaptive(575) {
+          width: 237px;
+          height: 237px;
+        }
       }
 
       &-pagination {
