--- a/src/scss/_components/home/_flexible.scss
+++ b/src/scss/_components/home/_flexible.scss
@@ -4,11 +4,17 @@
   overflow: hidden;
   background-color: #44b4a8;
 
-
   &__wrapper {
     position: relative;
     display: flex;
     min-height: calc(100vh - 51px);
+    @include adaptive(1365) {
+      min-height: 720px;
+    }
+    @include adaptive(1199) {
+      flex-wrap: wrap;
+      flex-direction: column-reverse;
+    }
 
     &-left,
     &-right {
@@ -22,12 +28,20 @@
       width: 500px;
       min-height: 680px;
       padding-bottom: 73px;
+      @include adaptive(1199) {
+        width: 100%;
+        min-height: 0;
+        padding-bottom: 50px;
+      }
     }
 
     &-right {
       position: relative;
       width: 100%;
       max-width: calc(100% - 500px);
+      @include adaptive(1199) {
+        max-width: 100%;
+      }
 
       > div {
         position: absolute;
@@ -37,15 +51,34 @@
         width: 100%;
         height: 100%;
         min-height: 100%;
+        @include adaptive(1199) {
+          position: static;
+          display: block;
+        }
 
         &:nth-of-type(1) {
           left: 0;
           width: 60%;
           justify-content: center;
           align-items: flex-start;
+          @include adaptive(1199) {
+            top: 0 !important;
+            width: 100%;
+          }
 
           img {
             transform: translateX(-40px);
+            @include adaptive(1199) {
+              transform: translateX(-50px);
+              margin-left: auto;
+              margin-right: auto;
+            }
+            @include adaptive(767) {
+              transform: translateX(-40px);
+            }
+            @include adaptive(424) {
+              transform: translateX(-30px);
+            }
           }
         }
         &:nth-of-type(2) {
@@ -53,10 +86,20 @@
           width: 60%;
           justify-content: space-between;
           align-items: flex-end;
+          @include adaptive(1199) {
+            display: none;
+          }
 
           img {
             position: relative;
             right: -17px;
+
+            &:nth-of-type(2) {
+              @include adaptive(1365) {
+                position: relative;
+                top: -50px;
+              }
+            }
           }
         }
 
@@ -72,11 +115,14 @@
 
   &__title {
     padding-bottom: 21px;
-    font-size: 48px;
     font-weight: 300;
     line-height: 1.17;
     letter-spacing: -1.1px;
     color: #000;
+    @include fluid(font-size, 320px, 1440px, 32px, 48px);
+    @include adaptive(1199) {
+      text-align: center;
+    }
 
     span {
       font-weight: bold;
@@ -84,10 +130,13 @@
   }
 
   &__desc {
-    font-size: 22px;
     font-weight: 300;
     line-height: 1.5;
     color: #000000;
+    @include fluid(font-size, 320px, 1440px, 16px, 22px);
+    @include adaptive(1199) {
+      text-align: center;
+    }
   }
 }
 
