--- a/src/pug/components/home/_advantages.pug
+++ b/src/pug/components/home/_advantages.pug
@@ -7,20 +7,20 @@ section#advantages.advantages
       .advantages__block-wrapper
         .advantages__block.advantages__block-0
           p.advantages__block-count.viewport-hide-js
-            span(data-from="0" data-to="100" data-speed="1500" data-refresh-interval="50" advantages-num-js)!= "100"
-            != "&nbsp;+"
+            span(advantages-num-js data-count='100')!= "100"
+            != "+"
           p.advantages__block-desc!= "Projects"
 
         .advantages__block.advantages__block-1
           p.advantages__block-count.viewport-hide-js
-            span(data-from="100" data-to="1000" data-speed="1500" data-refresh-interval="50" advantages-num-js)!= "1000"
-            != "&nbsp;+"
+            span(advantages-num-js data-count='1000')!= "1000"
+            != "+"
           p.advantages__block-desc!= "Scientists"
 
         .advantages__block.advantages__block-2
           p.advantages__block-count.viewport-hide-js
-            span(data-from="1000" data-to="100000" data-speed="1500" data-refresh-interval="50" advantages-num-js)!= "100000"
-            != "&nbsp;+"
+            span(advantages-num-js data-count='100000')!= "100000"
+            != "+"
           p.advantages__block-desc!= "Freelance hours"
 
 
