--- a/src/scss/_components/home/_info.scss
+++ b/src/scss/_components/home/_info.scss
@@ -7,29 +7,50 @@
     &-0 {
       padding-top: 97px;
       padding-bottom: 71px;
+      @include adaptive(767) {
+        padding-top: 50px;
+        padding-bottom: 50px;
+      }
     }
     &-1 {
       padding-top: 116px;
       padding-bottom: 94px;
+      @include adaptive(767) {
+        padding-top: 50px;
+        padding-bottom: 50px;
+      }
     }
     &-2 {
       padding-top: 38px;
       padding-bottom: 87px;
+      @include adaptive(767) {
+        padding-top: 50px;
+        padding-bottom: 50px;
+      }
     }
   }
 
   &__block {
     display: flex;
     align-items: center;
+    @include adaptive(767) {
+      flex-wrap: wrap;
+    }
 
     &-0 {
       img {
         position: relative;
         left: 7px;
+        @include adaptive(767) {
+          left: 0;
+        }
       }
 
       .info__block-right {
         padding-left: 54px;
+        @include adaptive(767) {
+          padding-left: 0;
+        }
       }
     }
     &-1 {
@@ -38,28 +59,44 @@
       img {
         position: relative;
         left: 11px;
+        @include adaptive(767) {
+          left: 0;
+        }
       }
 
       .info__block-right {
         position: relative;
         top: -13px;
+        @include adaptive(767) {
+          top: 0;
+        }
       }
     }
     &-2 {
       img {
         position: relative;
         left: -20px;
+        @include adaptive(767) {
+          left: 0;
+        }
       }
 
       .info__block-right {
         padding-left: 54px;
         padding-top: 55px;
+        @include adaptive(767) {
+          padding-left: 0;
+          padding-top: 0;
+        }
       }
     }
 
     &-left,
     &-right {
       width: 50%;
+      @include adaptive(767) {
+        width: 100%;
+      }
 
       img {
         display: block;
@@ -69,20 +106,35 @@
         margin-right: auto;
       }
     }
+
+    &-left {
+      @include adaptive(767) {
+        padding-left: 50px;
+        padding-right: 50px;
+      }
+    }
   }
 
   &__title {
     padding-bottom: 16px;
     text-align: left;
+    @include adaptive(767) {
+      padding-top: 30px;
+      text-align: center;
+    }
   }
 
   &__desc {
     width: 100%;
     max-width: 536px;
-    font-size: 22px;
     font-weight: 300;
     line-height: 1.5;
     color: #4a4a4a;
+    @include fluid(font-size, 320px, 1440px, 16px, 22px);
+    @include adaptive(767) {
+      max-width: 100%;
+      text-align: center;
+    }
   }
 }
 
