--- a/src/scss/_components/home/_main.scss
+++ b/src/scss/_components/home/_main.scss
@@ -15,11 +15,16 @@
 
     &-left,
     &-right {
-      width: 50%;
       height: 100%;
     }
 
+    &-left {
+      flex: 1;
+    }
+
     &-right {
+      width: 100%;
+
       img {
         position: relative;
         top: -51px;
@@ -27,6 +32,26 @@
         max-width: 100%;
         height: auto;
         margin-left: auto;
+        @include adaptive(1365) {
+          right: -50px;
+        }
+        @include adaptive(1199) {
+          right: -200px;
+        }
+        @include adaptive(991) {
+          top: 130px;
+        }
+        @include adaptive(767) {
+          top: 140px;
+          right: -60px;
+        }
+        @include adaptive(575) {
+          top: 220px;
+          right: -30px;
+        }
+        @include adaptive(374) {
+          top: 240px;
+        }
       }
     }
   }
@@ -35,6 +60,12 @@
     display: flex;
     align-items: center;
     min-height: calc(100vh - 51px);
+    @include adaptive(1365) {
+      min-height: 0;
+    }
+    @include adaptive(991) {
+      flex-wrap: wrap;
+    }
 
     &-left,
     &-right {
@@ -48,38 +79,74 @@
       width: 52%;
       padding-top: 135px;
       padding-bottom: 24px;
+      @include adaptive(991) {
+        width: 90%;
+      }
+      @include adaptive(767) {
+        width: 100%;
+        padding-top: 50px;
+        padding-bottom: 0;
+
+        > div {
+          width: calc(100% + 30px);
+          margin-left: -15px;
+          padding: 15px;
+          background-color: rgba(#fff, 0.7);
+        }
+      }
     }
 
     &-right {
       width: 48%;
+      @include adaptive(991) {
+        display: none;
+      }
     }
   }
 
   &__title {
     padding-bottom: 11px;
-    font-size: 56px;
     font-weight: 900;
     line-height: 1.14;
     letter-spacing: -1.2px;
     color: #4a4a4a;
     text-transform: uppercase;
+    @include fluid(font-size, 320px, 1440px, 40px, 56px);
+    @include adaptive(767) {
+      span {
+        display: block;
+      }
+    }
   }
 
   &__subtitle {
     width: 100%;
     max-width: 525px;
     padding-bottom: 32px;
-    font-size: 24px;
     font-weight: 300;
     font-style: normal;
     font-stretch: normal;
     line-height: 1.33;
     letter-spacing: -0.5px;
     color: #4a4a4a;
+    @include fluid(font-size, 320px, 1440px, 20px, 24px);
+    @include adaptive(991) {
+      padding-bottom: 260px;
+    }
+    @include adaptive(767) {
+      padding-bottom: 260px;
+
+      span {
+        display: block;
+      }
+    }
   }
 
   &__btn {
     margin-bottom: 8px;
+    @include adaptive(767) {
+      max-width: 100%;
+    }
   }
 
   &__info {
@@ -88,6 +155,13 @@
     line-height: 1.25;
     letter-spacing: normal;
     color: #5e5e5e;
+    @include adaptive(1199) {
+      padding-bottom: 50px;
+    }
+    @include adaptive(767) {
+      padding-bottom: 22px;
+      text-align: center;
+    }
 
     span {
       font-weight: 500;
@@ -95,8 +169,11 @@
   }
 
   &__from {
-    font-size: 17px;
     color: #4a4a4a;
+    @include fluid(font-size, 320px, 1440px, 14px, 17px);
+    @include adaptive(767) {
+      text-align: center;
+    }
 
     &-1 {
       font-weight: bold;
