--- a/src/scss/_components/home/_pre.scss
+++ b/src/scss/_components/home/_pre.scss
@@ -4,6 +4,10 @@
   padding-top: 102px;
   padding-bottom: 63px;
   background-color: #f8f8f8;
+  @include adaptive(767) {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
 
   &__title {
     padding-bottom: 20px;
@@ -26,6 +30,9 @@
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 16px;
+    @include adaptive(575) {
+      max-width: 100%;
+    }
   }
 
   &__info {
