--- a/src/scss/_shared/_swiper.scss
+++ b/src/scss/_shared/_swiper.scss
@@ -115,6 +115,12 @@
   &-think {
     max-width: 100%;
     height: 355px;
+    @include adaptive(767) {
+      height: auto;
+      padding-left: 15px;
+      padding-right: 15px;
+      padding-bottom: 50px;
+    }
 
     .swiper {
       &-slide {
@@ -124,6 +130,13 @@
         padding: 32px 36px 37px 39px;
         border: solid 1px rgba(#44a399, 0.7);
         @include transition(box-shadow, border-color, background-color);
+        @include adaptive(767) {
+          width: 100%;
+          height: auto;
+        }
+        @include adaptive(575) {
+          padding: 30px 15px;
+        }
 
         &-content {
           opacity: 1;
@@ -172,6 +185,9 @@
           border-color: #ffffff;
           background-color: #45b8ac;
           @include transition(box-shadow 0.4s, border-color 0.4s, background-color 0.4s);
+          @include adaptive(767) {
+            width: 100% !important;
+          }
 
           .swiper-slide-content {
             opacity: 0;
