--- a/src/pug/components/_footer.pug
+++ b/src/pug/components/_footer.pug
@@ -21,7 +21,7 @@ footer#footer.footer
       .footer__wrapper-left
 
         .copyright
-          p!= "© 2019 Outsmart Insights Ltd <span>|</span> <a href='#'>Privacy Notice</a>"
+          p!= "© " + new Date().getFullYear()  + " Outsmart Insights Ltd <span>|</span> <a href='#'>Privacy Notice</a>"
 
       .footer__wrapper-right
 
