--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -7103,4 +7103,326 @@ picture {
   text-decoration: underline;
 }
 
+/* line 3, src/scss/_components/rankings/_rankings.scss */
+.rankings {
+  position: relative;
+  top: -51px;
+  min-height: -webkit-calc(100vh - 51px);
+  min-height: calc(100vh - 51px);
+}
+
+/* line 9, src/scss/_components/rankings/_rankings.scss */
+.rankings__wrapper-0 {
+  min-height: 374px;
+  padding-top: 52px;
+  padding-bottom: 52px;
+  background-color: #f8f8f8;
+}
+
+/* line 16, src/scss/_components/rankings/_rankings.scss */
+.rankings__wrapper-1 {
+  min-height: -webkit-calc((100vh - 51px) - 374px);
+  min-height: calc((100vh - 51px) - 374px);
+}
+
+/* line 21, src/scss/_components/rankings/_rankings.scss */
+.rankings__box {
+  cursor: pointer;
+  position: relative;
+  width: 100%;
+  max-width: -webkit-calc((100% - (21px * 3)) / 4);
+  max-width: calc((100% - (21px * 3)) / 4);
+  height: 271px;
+  background-color: #ffffff;
+  -webkit-box-shadow: 0 5px 9px 0 #0000002d;
+          box-shadow: 0 5px 9px 0 #0000002d;
+  -webkit-transition: -webkit-transform 0.3s ease-in-out, -webkit-box-shadow 0.3s ease-in-out;
+  transition: -webkit-transform 0.3s ease-in-out, -webkit-box-shadow 0.3s ease-in-out;
+  -o-transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out, -webkit-box-shadow 0.3s ease-in-out;
+}
+
+/* line 31, src/scss/_components/rankings/_rankings.scss */
+.rankings__box:hover {
+  -webkit-transform: translateY(-8px);
+      -ms-transform: translateY(-8px);
+          transform: translateY(-8px);
+  -webkit-box-shadow: 0 17px 9px 0 #0000002d;
+          box-shadow: 0 17px 9px 0 #0000002d;
+  -webkit-transition: -webkit-transform 0.3s ease-in-out, -webkit-box-shadow 0.3s ease-in-out;
+  transition: -webkit-transform 0.3s ease-in-out, -webkit-box-shadow 0.3s ease-in-out;
+  -o-transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out, -webkit-box-shadow 0.3s ease-in-out;
+}
+
+/* line 38, src/scss/_components/rankings/_rankings.scss */
+.rankings__box-1 .rankings__box-top {
+  background-color: #45b8ac;
+}
+
+/* line 43, src/scss/_components/rankings/_rankings.scss */
+.rankings__box-2 .rankings__box-top {
+  background-color: #26a69a;
+}
+
+/* line 48, src/scss/_components/rankings/_rankings.scss */
+.rankings__box-3 .rankings__box-top {
+  background-color: #009688;
+}
+
+/* line 53, src/scss/_components/rankings/_rankings.scss */
+.rankings__box-4 .rankings__box-top {
+  background-color: #008679;
+}
+
+/* line 58, src/scss/_components/rankings/_rankings.scss */
+.rankings__box-wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+/* line 64, src/scss/_components/rankings/_rankings.scss */
+.rankings__box-top {
+  height: 166px;
+  background-color: #26a69a;
+}
+
+/* line 68, src/scss/_components/rankings/_rankings.scss */
+.rankings__box-top--top {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-height: 82px;
+  padding: 19px 15px 10px;
+}
+
+/* line 75, src/scss/_components/rankings/_rankings.scss */
+.rankings__box-top--bottom {
+  padding: 0 15px 7px;
+  text-align: right;
+}
+
+/* line 80, src/scss/_components/rankings/_rankings.scss */
+.rankings__box-top--left {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  max-width: 100%;
+}
+
+/* line 85, src/scss/_components/rankings/_rankings.scss */
+.rankings__box-top--right {
+  width: 82px;
+}
+
+/* line 90, src/scss/_components/rankings/_rankings.scss */
+.rankings__box-bottom {
+  height: -webkit-calc(271px - 166px);
+  height: calc(271px - 166px);
+  padding: 16px 15px 32px;
+}
+
+/* line 95, src/scss/_components/rankings/_rankings.scss */
+.rankings__box-circle {
+  overflow: hidden;
+  position: relative;
+  width: 82px;
+  height: 82px;
+  -webkit-border-radius: 100%;
+          border-radius: 100%;
+  border: solid 2px #ffffff;
+}
+
+/* line 103, src/scss/_components/rankings/_rankings.scss */
+.rankings__box-circle img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+
+/* line 114, src/scss/_components/rankings/_rankings.scss */
+.rankings__box-num {
+  position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+/* line 119, src/scss/_components/rankings/_rankings.scss */
+.rankings__box-num span {
+  font-size: 100px;
+  font-weight: bold;
+  line-height: 0.7;
+  color: #ffffff;
+}
+
+/* line 126, src/scss/_components/rankings/_rankings.scss */
+.rankings__box-num i {
+  text-transform: uppercase;
+  font-style: normal;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 1;
+  color: #ffffff;
+}
+
+/* line 136, src/scss/_components/rankings/_rankings.scss */
+.rankings__box-name {
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 1;
+  color: #ffffff;
+}
+
+/* line 143, src/scss/_components/rankings/_rankings.scss */
+.rankings__box-country {
+  font-size: 18px;
+  line-height: 1.33;
+  color: #ffffff;
+}
+
+/* line 149, src/scss/_components/rankings/_rankings.scss */
+.rankings__box-progress {
+  position: relative;
+  height: 16px;
+  margin-bottom: 4px;
+  background-color: rgba(35, 36, 37, 0.1);
+}
+
+/* line 155, src/scss/_components/rankings/_rankings.scss */
+.rankings__box-progress span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  background-color: #45b8ac;
+}
+
+/* line 164, src/scss/_components/rankings/_rankings.scss */
+.rankings__box-points {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+/* line 167, src/scss/_components/rankings/_rankings.scss */
+.rankings__box-points--left {
+  position: relative;
+  width: 60%;
+  padding-right: 15px;
+}
+
+/* line 172, src/scss/_components/rankings/_rankings.scss */
+.rankings__box-points--left:after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+  right: 0;
+  margin-top: 12px;
+  width: 1px;
+  height: 23px;
+  border: solid 1px #d3d3d4;
+}
+
+/* line 185, src/scss/_components/rankings/_rankings.scss */
+.rankings__box-points--right {
+  width: 40%;
+  padding-left: 15px;
+}
+
+/* line 190, src/scss/_components/rankings/_rankings.scss */
+.rankings__box-points-title {
+  font-size: 10px;
+  line-height: 2.4;
+  text-align: center;
+  color: #232425;
+}
+
+/* line 197, src/scss/_components/rankings/_rankings.scss */
+.rankings__box-points-num {
+  font-size: 30px;
+  font-weight: bold;
+  line-height: 0.8;
+  color: #232425;
+  text-align: center;
+}
+
+/* line 205, src/scss/_components/rankings/_rankings.scss */
+.rankings__box-points-step {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+/* line 209, src/scss/_components/rankings/_rankings.scss */
+.rankings__box-points-step i {
+  margin-right: 3px;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 7px;
+}
+
+/* line 216, src/scss/_components/rankings/_rankings.scss */
+.rankings__box-points-step i.rankings__box-points-step--up {
+  -webkit-transform: translateY(-4px);
+      -ms-transform: translateY(-4px);
+          transform: translateY(-4px);
+  border-color: transparent transparent #45b8ac transparent;
+}
+
+/* line 220, src/scss/_components/rankings/_rankings.scss */
+.rankings__box-points-step i.rankings__box-points-step--down {
+  -webkit-transform: translateY(4px);
+      -ms-transform: translateY(4px);
+          transform: translateY(4px);
+  border-color: #d63864 transparent transparent transparent;
+}
+
+/* line 226, src/scss/_components/rankings/_rankings.scss */
+.rankings__box-points-step span {
+  margin-left: 3px;
+  font-size: 30px;
+  line-height: 0.8;
+  color: #232425;
+}
+
 /*# sourceMappingURL=maps/app.css.map */
