--- a/src/pug/components/rankings/_rankings.pug
+++ b/src/pug/components/rankings/_rankings.pug
@@ -9,4 +9,6 @@ section#rankings.rankings
   .rankings__wrapper.rankings__wrapper-1
     .c-grid
 
+      include _rankings-table
+
 // SECTION rankings :: END
